RESOLVED FIXED187228
[Cocoa] Google Fonts doesn't work if the user has the requested font locally-installed
https://bugs.webkit.org/show_bug.cgi?id=187228
Summary [Cocoa] Google Fonts doesn't work if the user has the requested font locally-...
Myles C. Maxfield
Reported 2018-06-30 18:59:16 PDT
[Cocoa] Google Fonts doesn't work if the user has the requested font locally-installed
Attachments
Patch (9.17 KB, patch)
2018-06-30 19:03 PDT, Myles C. Maxfield
no flags
Archive of layout-test-results from ews104 for mac-sierra-wk2 (2.87 MB, application/zip)
2018-06-30 20:14 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.34 MB, application/zip)
2018-06-30 20:51 PDT, EWS Watchlist
no flags
Patch (10.95 KB, patch)
2018-07-01 21:38 PDT, Myles C. Maxfield
bfulgham: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews205 for win-future (12.78 MB, application/zip)
2018-07-01 23:35 PDT, EWS Watchlist
no flags
Myles C. Maxfield
Comment 1 2018-06-30 19:03:51 PDT
Myles C. Maxfield
Comment 2 2018-06-30 19:04:09 PDT
EWS Watchlist
Comment 3 2018-06-30 20:14:57 PDT
Comment on attachment 344034 [details] Patch Attachment 344034 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/8400122 New failing tests: fast/text/user-installed-fonts/local.html
EWS Watchlist
Comment 4 2018-06-30 20:14:59 PDT
Created attachment 344038 [details] Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5 2018-06-30 20:51:25 PDT
Comment on attachment 344034 [details] Patch Attachment 344034 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/8400165 New failing tests: fast/text/user-installed-fonts/local.html
EWS Watchlist
Comment 6 2018-06-30 20:51:26 PDT
Created attachment 344040 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
Myles C. Maxfield
Comment 7 2018-07-01 04:53:10 PDT
The tests aren't actually failing, they just need some rejiggering to move the relevant pieces around the image
Myles C. Maxfield
Comment 8 2018-07-01 21:30:09 PDT
The new test passes on macOS Mojave and iOS 12 (where the feature is enabled).
Myles C. Maxfield
Comment 9 2018-07-01 21:38:14 PDT
EWS Watchlist
Comment 10 2018-07-01 23:35:08 PDT
Comment on attachment 344073 [details] Patch Attachment 344073 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8409249 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 11 2018-07-01 23:35:20 PDT
Created attachment 344078 [details] Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Myles C. Maxfield
Comment 12 2018-07-02 02:04:43 PDT
Failure is unrelated
Brent Fulgham
Comment 13 2018-07-02 12:21:29 PDT
Comment on attachment 344073 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=344073&action=review r=me > Source/WebCore/ChangeLog:14 > + doesnât set the ShouldAllowUserInstalledFonts flag. Then, in CSSFontFaceSource::font(), a similar lookup is Please get rid of this smart quote! > Source/WebCore/ChangeLog:18 > + When the CSSFontFaceSourceâs status gets set to Success, that means âthis is the font face source that âthis > Source/WebCore/ChangeLog:19 > + represents the @font-face blockâ but when CSSFontFaceSource::font() returns nullptr, that means âThe font face blockâ. and. âThe > Source/WebCore/ChangeLog:20 > + source canât be used for some reasonâ so we then continue searching down the font-family list (and render the canât be used for some reasonâ
Myles C. Maxfield
Comment 14 2018-07-02 17:15:31 PDT
Myles C. Maxfield
Comment 15 2018-07-09 23:30:24 PDT
*** Bug 186316 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.